--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
-#api stuff
+# Ignore environment variables file
 .env
+
+# Ignore any files with API keys
+*api_key*
+
+# Python-related
+__pycache__/
+*.py[cod]
+*.so
+
+# Virtual environment
+venv/
+env/
+.venv/
+
+# IDE-related
+.vscode/
+.idea/
+
+# OS-related
+.DS_Store
+Thumbs.db
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Generated files
+kg.html
+
+# Logs
+*.log
+
+# Google Drive mount point (if applicable)
+/content/drive/
